--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 	<head>
 		<meta charset='utf-8'>
 		<link rel='stylesheet' href='style.css'>
+		<link rel="stylesheet/less" type="text/css" href="style.less">
+		<script src="https://cdn.jsdelivr.net/npm/less@4.1.1" ></script>
 	</head>
 	<body>
-	
+		<img class='img' src='https://images.pexels.com/photos/556666/pexels-photo-556666.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500' alt='photo'>
 			
 	</body>
 </html>
