--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<img class='img' src='https://images.pexels.com/photos/556666/pexels-photo-556666.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500' alt='photo'>
-			
+		<div class='text'>This image is unique</div>	
+		<div class='btn'></div>
 	</body>
 </html>
